Fix: Overlapping divs

--- a/css/index.css
+++ b/css/index.css
@@ -253,8 +253,10 @@ body {
 }
 .interests {
   margin-top: 2rem;
+  margin-bottom: 3rem;
+  border: 1px solid black;
   position: relative;
-  height: 700px;
+  height: 750px;
 }
 .interests .intro-note h1 {
   font-size: 2.5rem;
@@ -299,7 +301,7 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  margin: 3rem 2rem;
+  margin: 4rem 2rem;
 }
 .feature-section h1 {
   font-size: 2.5rem;
