--- a/featured/featured.less
+++ b/featured/featured.less
@@ -1,7 +1,7 @@
 .feature-section {
   .flex-mixin(column);
   position: relative;
-  margin: @large-margin 2rem;
+  margin: 4.0rem 2rem;
   h1 {
     font-size: 2.5rem;
     color: #4e4c4c;
