--- a/interests-section/interests.less
+++ b/interests-section/interests.less
@@ -1,7 +1,9 @@
 .interests {
   margin-top: @medium-margin;
+  margin-bottom: @large-margin;
+  border: 1px solid black;
   position: relative;
-  height: 700px;
+  height: 750px;
   // change on desktop to 1000px;
   .intro-note {
     h1 {
